2008-07-xx:
    * version 0.6.0
    * Update QuickWhois for new profiles
    * QuickPost now checks for errors after posting the message
    * Prevent long profile fields from stretching QuickWhois
    * QuickPost now catches short topic titles before sending the post
      to the server
    * Add GameFOX Standard Default stylesheet with the old QuickPost look
    * Add "Grab From GameFAQs" button to retrieve signature from GameFAQs
    * Remove site settings functionality
    * Add grab button to retrieve board settings from GameFAQs
    * Rewrite quoting backend, allow for user-defined quote templates. Quotes
      are now added in order at the bottom of the post, even with your
      signature in the textarea